<?xml version="1.0"?>
<package format="3">
    <name>gazebo-spring</name>
    <version>1.0.0</version>
    <description>A spring plugin for gazebo</description>
    <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
    <license>BSD</license>
    <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
    <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
